--- a/styles.css
+++ b/styles.css
@@ -241,7 +241,7 @@ body{
     from { left: 0; } to { left: 99%; }
   }
   @-moz-keyframes moveX {
-    from { left: 0; } to { left: 99%; }
+    from { left: 99%; } to { left: 0; }
   }
   @-o-keyframes moveX {
     from { left: 0; } to { left: 99%; }
@@ -254,13 +254,13 @@ body{
     from { top: 0; } to { top: 97%; }
   }
   @-moz-keyframes moveY {
-    from { top: 0; } to { top: 97%; }
+    from { top: 97%; } to { top: 0; }
   }
   @-o-keyframes moveY {
     from { top: 0; } to { top: 97%; }
   }
   @keyframes moveY {
-    from { top: 0; } to { top: 97%; }
+    from { top: 97%; } to { top: 0; }
   }
 
 @keyframes breathe{
@@ -306,4 +306,65 @@ body{
     .btn-text{
         animation: breathe 1s infinite linear;
     }
+}
+
+@media  screen and (max-width: 1440px) {
+
+  .header-con{
+    padding: 0;
+  }
+
+  .header-con .title-box h1{
+      font-size: 4rem;
+  }
+
+  .game-state{
+      font-size: 2.4rem;
+  }
+
+  .board{
+      height: 400px;
+      width: 400px;
+  }
+
+  .board .button{
+      height: 113px;
+      width: 113px;
+  }
+
+}
+
+@media  screen and (max-width: 767px) {
+
+  .header-con .title-box h1{
+      font-size: 2rem;
+  }
+
+  .game-state{
+      font-size: 1.6rem;
+  }
+
+  .board{
+      height: 300px;
+      width: 300px;
+  }
+
+  .board .button{
+      height: 80px;
+      width: 80px;
+  }
+
+  .reset-btn{
+    font-size: 1rem;
+    width: 100px;
+    height: 40px;
+    font-weight: 500;
+}
+
+.reset-btn .btn-text {
+    font-size: 0.8rem;
+    padding: 0 0;
+    font-weight: 500;
+  }
+
 }
